<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.MyViewModel" />
    </data>
    <!-- using linear layout to align the
    views vertically on top of each other -->
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical">
     <TextView
         android:text="@string/instruction"
         style="@style/welcome_style"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="@string/instruction1"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/instruction2"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/instruction3"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/instruction4"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/instruction5"
         />
     <Button
         android:id="@+id/go_to_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/go_to_shoe_list"
         android:onClick="@{(view) -> viewModel.navigate(view)}"
         style="@style/button"/>


 </LinearLayout>
</layout>