<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.MyViewModel" />
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- us linear layout to place 2 view group vertically   -->
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical">
        <!-- using grid layout to make a two-column view
        column for labels and column for edit text-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rowCount="4"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_shoe_name" />

        <EditText
            android:id="@+id/shoe_name"
            style="@style/shoe_detail_text"
            android:autofillHints=""
            android:text="@={shoe.name}"
            android:hint="@string/shoe_name"
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_company_name" />

        <EditText
            android:id="@+id/company"
            android:hint="@string/company_name"
            android:text="@={shoe.company}"
            android:inputType="text"
            style="@style/shoe_detail_text"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_shoe_size" />

        <EditText
            android:id="@+id/shoe_size"
            android:hint="@string/shoe_size"
            android:text="@={shoe.size}"
            android:inputType="number"
            style="@style/shoe_detail_text"
            android:autofillHints="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_description" />

        <EditText
            android:id="@+id/description"
            style="@style/shoe_detail_text"
            android:text="@={shoe.description}"
            android:autofillHints=""
            android:hint="@string/description"
            android:inputType="text" />

    </GridLayout>
        <!--  using linear layout to place the button
        horizontally under the grid layout   -->
     <LinearLayout

         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <Button
             android:id="@+id/cancel"
             style="@style/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="@color/cancelButton"
             android:text="@string/cancel"
             android:onClick="@{(view)->viewModel.navigate(view)}"
             android:textColor="#FFFFFF" />
         <Button
             android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save"
             style="@style/button"
             android:layout_weight="1"
             android:layout_marginTop="20dp"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"

             />

     </LinearLayout>

 </LinearLayout>
</layout>