<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.MyViewModel" />
    </data>
    <!-- using linear layout to add 3 view on top of each other nothing complex-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:text="@string/welcome"
            style="@style/welcome_style" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="20sp" />
        <Button
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:text="@string/explore"
            android:onClick="@{(view)->viewModel.navigate(view)}"
            style="@style/button"/>


    </LinearLayout>
</layout>
